Added profile picture upload Endpoint
