# storage/api-docs/api-docs.json
@@ -1388,6 +1388,55 @@
                     }
                 ]
             }
+        },
+        "/api/image-upload": {
+            "post": {
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Upload Profile Picture",
+                "description": "Return user Object",
+                "requestBody": {
+                    "description": "upload Profile Picture",
+                    "required": true,
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "properties": {
+                                    "profile_pic": {
+                                        "type": "string",
+                                        "format": "binary"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "422": {
+                        "description": "Incorrect Image Format",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Sorry, wrong input. Please try again"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "apiAuth": []
+                    }
+                ]
+            }
         }
     },
     "components": {
